<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@color/yellow"
    tools:context=".Common.LoginSignUp.Login">
    
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"

    >

    <ImageView
        android:id="@+id/login_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:src="@drawable/general_back"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/muli_black"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:layout_marginTop="50dp"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp">
<!--Username-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="Enter Username"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/ic_user"
            app:startIconTint="@color/black"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/muli_black"
                android:textColor="@color/black"
                app:boxStrokeColor="@color/black"


                />


        </com.google.android.material.textfield.TextInputLayout>


<!--        Password-->


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/enter_password"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            android:textColorHint="#0C0C0C"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/ic_password"
            app:startIconTint="@color/black"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/muli_black"
                android:textColor="@color/black"
                app:boxStrokeColor="@color/black"
                android:inputType="text"


                />


        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">


            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:text="@string/remember_me"
                android:buttonTint="@color/black"
                android:layout_centerVertical="true"
                android:textColor="@color/black"/>
            
            
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Forget Password"
                android:background="#00000000"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"/>





        </RelativeLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@color/black"
            android:textColor="@color/white"
            />


        <Button
            android:id="@+id/create_btn"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:background="#00000000"
            android:layout_gravity="center"
            tools:ignore="ButtonStyle"
           />










    </LinearLayout>




</LinearLayout>










    

</ScrollView>